--- a/TMS/TMS/Web.config
+++ b/TMS/TMS/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,13 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TMS-20160928111009.mdf;Initial Catalog=aspnet-TMS-20160928111009;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="TMSEntities" connectionString="metadata=res://*/Models.TMSModel.csdl|res://*/Models.TMSModel.ssdl|res://*/Models.TMSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=TMS;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="TMSContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=TMSContext-20160928234730; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|TMSContext-20160928234730.mdf"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TMS-20160928111009.mdf;Initial Catalog=aspnet-TMS-20160928111009;Integrated Security=True" providerName="System.Data.SqlClient" />
+   
+  <add name="TMSEntities" connectionString="metadata=res://*/Models.TMSModel.csdl|res://*/Models.TMSModel.ssdl|res://*/Models.TMSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLExpress;initial catalog=TMS;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
