--- a/TMS/TMS/TMS.csproj
+++ b/TMS/TMS/TMS.csproj
@@ -310,6 +310,46 @@
     <Content Include="Content\img\user6-128x128.jpg" />
     <Content Include="Content\img\user7-128x128.jpg" />
     <Content Include="Content\img\user8-128x128.jpg" />
+    <Content Include="Content\Plugins\datatables\css\dataTables.bootstrap.css" />
+    <Content Include="Content\Plugins\datatables\css\dataTables.bootstrap.min.css" />
+    <Content Include="Content\Plugins\datatables\css\dataTables.bootstrap4.css" />
+    <Content Include="Content\Plugins\datatables\css\dataTables.bootstrap4.min.css" />
+    <Content Include="Content\Plugins\datatables\css\dataTables.foundation.css" />
+    <Content Include="Content\Plugins\datatables\css\dataTables.foundation.min.css" />
+    <Content Include="Content\Plugins\datatables\css\dataTables.jqueryui.css" />
+    <Content Include="Content\Plugins\datatables\css\dataTables.jqueryui.min.css" />
+    <Content Include="Content\Plugins\datatables\css\dataTables.material.css" />
+    <Content Include="Content\Plugins\datatables\css\dataTables.material.min.css" />
+    <Content Include="Content\Plugins\datatables\css\dataTables.semanticui.css" />
+    <Content Include="Content\Plugins\datatables\css\dataTables.semanticui.min.css" />
+    <Content Include="Content\Plugins\datatables\css\dataTables.uikit.css" />
+    <Content Include="Content\Plugins\datatables\css\dataTables.uikit.min.css" />
+    <Content Include="Content\Plugins\datatables\css\jquery.dataTables.css" />
+    <Content Include="Content\Plugins\datatables\css\jquery.dataTables.min.css" />
+    <Content Include="Content\Plugins\datatables\css\jquery.dataTables_themeroller.css" />
+    <Content Include="Content\Plugins\datatables\images\favicon.ico" />
+    <Content Include="Content\Plugins\datatables\images\sort_asc.png" />
+    <Content Include="Content\Plugins\datatables\images\sort_asc_disabled.png" />
+    <Content Include="Content\Plugins\datatables\images\sort_both.png" />
+    <Content Include="Content\Plugins\datatables\images\sort_desc.png" />
+    <Content Include="Content\Plugins\datatables\images\sort_desc_disabled.png" />
+    <Content Include="Content\Plugins\datatables\js\dataTables.bootstrap.js" />
+    <Content Include="Content\Plugins\datatables\js\dataTables.bootstrap.min.js" />
+    <Content Include="Content\Plugins\datatables\js\dataTables.bootstrap4.js" />
+    <Content Include="Content\Plugins\datatables\js\dataTables.bootstrap4.min.js" />
+    <Content Include="Content\Plugins\datatables\js\dataTables.foundation.js" />
+    <Content Include="Content\Plugins\datatables\js\dataTables.foundation.min.js" />
+    <Content Include="Content\Plugins\datatables\js\dataTables.jqueryui.js" />
+    <Content Include="Content\Plugins\datatables\js\dataTables.jqueryui.min.js" />
+    <Content Include="Content\Plugins\datatables\js\dataTables.material.js" />
+    <Content Include="Content\Plugins\datatables\js\dataTables.material.min.js" />
+    <Content Include="Content\Plugins\datatables\js\dataTables.semanticui.js" />
+    <Content Include="Content\Plugins\datatables\js\dataTables.semanticui.min.js" />
+    <Content Include="Content\Plugins\datatables\js\dataTables.uikit.js" />
+    <Content Include="Content\Plugins\datatables\js\dataTables.uikit.min.js" />
+    <Content Include="Content\Plugins\datatables\js\jquery.dataTables.js" />
+    <Content Include="Content\Plugins\datatables\js\jquery.dataTables.min.js" />
+    <Content Include="Content\Plugins\datatables\js\jquery.js" />
     <Content Include="Content\skins\skin-black-light.css" />
     <Content Include="Content\skins\skin-black-light.min.css" />
     <Content Include="Content\skins\skin-black.css" />
@@ -368,6 +408,7 @@
     <Content Include="Models\TMSModel.edmx.diagram">
       <DependentUpon>TMSModel.edmx</DependentUpon>
     </Content>
+    <Content Include="Content\Plugins\datatables\images\Sorting icons.psd" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
