--- a/TMS/TMS/Web.config
+++ b/TMS/TMS/Web.config
@@ -9,9 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TMS-20160928111009.mdf;Initial Catalog=aspnet-TMS-20160928111009;Integrated Security=True" providerName="System.Data.SqlClient" />
-   
-  <add name="TMSEntities" connectionString="metadata=res://*/Models.TMSModel.csdl|res://*/Models.TMSModel.ssdl|res://*/Models.TMSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLExpress;initial catalog=TMS;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLExpress;Initial Catalog=TMS;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="TMSEntities" connectionString="metadata=res://*/Models.TMSModel.csdl|res://*/Models.TMSModel.ssdl|res://*/Models.TMSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLExpress;initial catalog=TMS;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -25,6 +25,7 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <roleManager enabled="true" />
   </system.web>
   <system.webServer>
     <modules>
@@ -33,6 +34,10 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+      <remove statusCode="403" />
+      <error statusCode="403" responseMode="ExecuteURL" path="/Error/Error403" />
+    </httpErrors>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -90,4 +95,17 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.net>
+    <mailSettings>
+      <smtp from="huytcd16@gmail.com">
+        <network host="smtp.gmail.com"
+                 port="587"
+                 enableSsl="true"
+                 userName="huytcd16@gmail.com"
+                 password="huydaivuong"
+                 defaultCredentials="false" />
+        <!--This must be false on Gmail-->
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
