--- a/TMS/TMS/Web.config
+++ b/TMS/TMS/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.\SQLExpress;Initial Catalog=TMS;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="TMSEntities" connectionString="metadata=res://*/Models.TMSModel.csdl|res://*/Models.TMSModel.ssdl|res://*/Models.TMSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HUYTCDSE61256\SQLEXPRESS;initial catalog=TMS;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="TMSEntities" connectionString="metadata=res://*/Models.TMSModel.csdl|res://*/Models.TMSModel.ssdl|res://*/Models.TMSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=TMS;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
