--- a/TMS/TMS/Web.config
+++ b/TMS/TMS/Web.config
@@ -96,7 +96,7 @@
   </system.codedom>
   <system.net>
     <mailSettings>
-      <smtp from="huytcd16@gmail.com">
+      <smtp from="huytcd16@gmail.com" deliveryMethod="Network">
         <network host="smtp.gmail.com" port="587" enableSsl="true" userName="huytcd16@gmail.com" password="huydaivuong" defaultCredentials="false" />
         <!--This must be false on Gmail-->
       </smtp>
