--- a/TMS/TMS/TMS.csproj
+++ b/TMS/TMS/TMS.csproj
@@ -282,6 +282,7 @@
       <DependentUpon>TMSModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Utils\AuthorizeAttribute.cs" />
+    <Compile Include="Utils\ConstantUtil.cs" />
     <Compile Include="Utils\EmailUtil.cs" />
     <Compile Include="ViewModels\UserViewModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -364,6 +365,9 @@
     <Content Include="Content\Plugins\datatables\js\jquery.dataTables.js" />
     <Content Include="Content\Plugins\datatables\js\jquery.dataTables.min.js" />
     <Content Include="Content\Plugins\datatables\js\jquery.js" />
+    <Content Include="Content\Plugins\datetimepicker\jquery.datetimepicker.full.min.js" />
+    <Content Include="Content\Plugins\datetimepicker\jquery.datetimepicker.css" />
+    <Content Include="Content\Plugins\datetimepicker\jquery.datetimepicker.min.js" />
     <Content Include="Content\skins\skin-black-light.css" />
     <Content Include="Content\skins\skin-black-light.min.css" />
     <Content Include="Content\skins\skin-black.css" />
@@ -436,6 +440,7 @@
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery-2.2.3.min.js" />
+    <Content Include="Scripts\jquery-ui.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -490,7 +495,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Areas\Admin\Views\Manage\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
