--- a/TMS/TMS/Web.config
+++ b/TMS/TMS/Web.config
@@ -97,7 +97,7 @@
   <system.net>
     <mailSettings>
       <smtp from="huytcd16@gmail.com" deliveryMethod="Network">
-        <network host="smtp.gmail.com" port="587" enableSsl="true" userName="huytcd16@gmail.com" password="huydaivuong" defaultCredentials="false" />
+        <network host="smtp.gmail.com" port="587" enableSsl="true" defaultCredentials="false" userName="huytcd16@gmail.com" password="huydaivuong" />
         <!--This must be false on Gmail-->
       </smtp>
     </mailSettings>
