Technician Ticket Index

--- a/TMS/TMS/TMS.csproj
+++ b/TMS/TMS/TMS.csproj
@@ -203,7 +203,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\ManageUserController.cs" />
-    <Compile Include="Areas\Technician\Controllers\TicketController.cs" />
+    <Compile Include="Areas\Technician\Controllers\ManageTicketController.cs" />
     <Compile Include="Areas\Technician\TechnicianAreaRegistration.cs" />
     <Compile Include="Areas\HelpDesk\Controllers\ManageTicketController.cs" />
     <Compile Include="Areas\HelpDesk\HelpDeskAreaRegistration.cs" />
@@ -469,8 +469,8 @@
     <Content Include="Areas\Admin\Views\ManageUser\HelpDesk.cshtml" />
     <Content Include="Areas\Technician\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Technician\Views\Shared\_Layout.cshtml" />
-    <Content Include="Areas\Technician\Views\Ticket\Index.cshtml" />
-    <Content Include="Areas\Technician\Views\Ticket\Solve.cshtml" />
+    <Content Include="Areas\Technician\Views\ManageTicket\Index.cshtml" />
+    <Content Include="Areas\Technician\Views\ManageTicket\Solve.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -540,11 +540,9 @@
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Admin\Views\Manage\" />
     <Folder Include="Areas\HelpDesk\Models\" />
-    <Folder Include="Areas\Technician\Controllers\" />
     <Folder Include="Areas\Technician\Models\" />
-    <Folder Include="Areas\Technician\Views\Shared\" />
-    <Folder Include="Content\Plugins\bootstrap-wysihtml5\" />
     <Folder Include="Content\css\" />
+    <Folder Include="Content\Plugins\bootstrap-wysihtml5\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
